fixed gradient white color issue, and added scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,23 @@ body {
     color: var(--dark);
     font-size: var(--font__normal);
     line-height: 1.5;
+    overflow: overlay;
+}
+
+body::-webkit-scrollbar{
+  width: 16px;
+}
+
+body::-webkit-scrollbar-track{
+  background: transparent;
+}
+
+body::-webkit-scrollbar-thumb{
+  background: hsla(0, 0%, 50%, 0.3);
+  border: 4px solid transparent;
+  background-clip: content-box;
+  border-radius: 500px;
+
 }
 
 p{
