--- a/src/components/UI/Icons/IconLink.css
+++ b/src/components/UI/Icons/IconLink.css
@@ -1,3 +1,3 @@
-/* .link__icon:hover{
+.link__icon:hover{
     color: var(--blue);
-} */
+}
